<resources>
    <string name="app_name">CatchOne</string>
    <string name="title_activity_maps">Map</string>
    <string name="from">from</string>
    <string name="to">To</string>

    <string name="pattern_solid">Solid</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_mixed">Mixed</string>

    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="clickable">Clickable</string>
    <string name="marker_icon">Marker Icon</string>
    <string name="where_do_these_taxis_go_to">Where do these taxis go to?</string>
    <string name="add_extra_info">Add Extra Info</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="add_extra_information">Click here and add extra information</string>
    <string name="the_destination">The Destination</string>
    <string name="the_price">The Price</string>
    <string name="extra_information">Extra Information</string>
    <string name="_10">10</string>
    <string name="pretoria_north">Pretoria North</string>
    <string name="thumbs_down">Thumbs down</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="add_new">Add New</string>
    <string name="r">R</string>
    <string name="go_to_map">Go To Map</string>
    <string name="user_guide">User Guide</string>
    <string name="logo">logo</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="welcome_to_the_catch1_majority_of_the_info_on_this_app_is_provided_by_the_users_of_the_app_if_you_feel_the_info_on_a_location_is_wrong_click_the_thumb_down_button_if_you_feel_the_info_is_correct_click_the_thumbs_up_button">Welcome to the Catch1"\n"Majority of the info on this app is provided by the Users of the app therefor take it with caution"\n"If you feel the info on a location is wrong click the thumb down button if you feel the info is correct click the thumbs up button or change the info</string>
    <string name="finished">Finished</string>
    <string name="share">Share App</string>
    <string name="time">time</string>
    <string name="name">name</string>
    <string name="message_from_admin">message from admin</string>
    <string name="send_button">send button</string>
    <string name="type_message">type message</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_button">Delete button</string>
    <string name="type_the_title">Type in the title to your post</string>
    <string name="type_your_post">Type in your Post</string>
    <string name="send">Send</string>
    <string name="comment_button">Comment Button</string>
    <string name="community_news"><![CDATA[Community & News]]></string>
    <string name="post">Post</string>
    <string name="map">map</string>
    <string name="news_community"><![CDATA[news&community]]></string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="update">Update</string>
    <string name="pick_another_image">Pick Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_add_profile_pic">Click to add profile pic</string>
    <string name="click_image">Click Image</string>
    <string name="edit_profile">Add Profile Name</string>
    <string name="title">Title</string>
    <string name="update_profile">Update Profile Name</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="notification">Notification</string>
    <string name="upload_image">Upload Image</string>
    <string name="blueicon">blueicon</string>
    <string name="logout">LogOut</string>
    <string name="uploaded_image">uploaded image</string>
</resources>
